@@ -4,6 +4,7 @@ Revision history for Cassandra-Client
 
       * Add a retry policy implementation for generic request failures
       * Throttler: finally fix the feedback mechanism
+      * Rework shutdown() to not need asynchronous code
 
 0.09    2016/11/15
 
